Install daisyui, currently working on post

--- a/app/Views/contents/frontend/contact.twig
+++ b/app/Views/contents/frontend/contact.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<section class="content about-header position-relative" id="about-header">
-		<img src="{{base_url('/assets/images/contact-header.png')}}" id="about-header-image" class="position-absolute top-0 bg-aneh top-0 img-fluid w-100"/>
+		<img src="{{base_url('/assets/images/contact-header.png')}}" id="about-header-image" class="position-absolute top-0 bg-aneh img-fluid w-100"/>
 		<div class="d-flex justify-content-center" id="about-header-text">
 			<div class="d-flex align-items-center">
 				<div class="d-block">
