--- a/app/Views/contents/frontend/insight.twig
+++ b/app/Views/contents/frontend/insight.twig
@@ -2,16 +2,16 @@
 
 {% block content %}
 	<section class="content about-header position-relative" id="about-header">
-		<img src="{{base_url('/assets/images/insight-header.png')}}" id="about-header-image" class="position-absolute top-0 bg-aneh top-0 img-fluid w-100"/>
+		<img src="{{base_url('/assets/images/insight-header.png')}}" id="about-header-image" class="position-absolute bg-aneh top-0 img-fluid w-100"/>
 		<div class="d-flex justify-content-center" id="about-header-text" id="about-header-text">
 			<div class="d-flex align-items-center">
 				<div class="d-block">
-				<h1 class="text-white bet text-uppercase fs35r text-center d-block" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" data-aos-once="true" data-aos-duration="2000" data-aos-delay="100">
-					Insights
-				</h1>
-				<p class="d-none d-md-block text-white text-uppercase text-center pt-2 fs09r" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-once="true" data-aos-duration="2000" data-aos-delay="200">
-					we present to you many technology informations to support your mobilization.<br />From transportation, information, communication, medical to construction,<br />as well as other information to add more of your knowledges..
-				</p>
+					<h1 class="text-white bet text-uppercase fs35r text-center d-block" data-aos="zoom-in" data-aos-anchor-placement="bottom-bottom" data-aos-once="true" data-aos-duration="2000" data-aos-delay="100">
+						Insights
+					</h1>
+					<p class="d-none d-md-block text-white text-uppercase text-center pt-2 fs09r" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-once="true" data-aos-duration="2000" data-aos-delay="200">
+						we present to you many technology informations to support your mobilization.<br/>From transportation, information, communication, medical to construction,<br/>as well as other information to add more of your knowledges..
+					</p>
 				</div>
 			</div>
 		</div>
@@ -27,16 +27,17 @@
 			<div class="row justify-content-md-center">
 				<div class="col-9">
 					<div class="row">
-					{% for item in posts %}
-					<article class="text-white col-6 insight">
-						<img src="{{base_url('media/article/thumb_' ~ item.cover)}}" class="img-fluid w-100" />
-						<div class="meta fs08r py-2">
-							<span class="text-secondary text-uppercase me-2">{{item.category}}</span> {{item.date|date('d/m/Y')}}
-						</div>
-						<h2 class="fs12r">{{item.title}}</h2>
-						<a href="{{base_url('detail/' ~ item.slug)}}" class="linkin text-uppercase fs08r">more</a>
-					</article>						
-					{% endfor %}
+						{% for item in posts %}
+							<article class="text-white col-6 insight">
+								<img src="{{item.cover}}" class="img-fluid w-100"/>
+								<div class="meta fs08r py-2">
+									<span class="text-secondary text-uppercase me-2">{{item.category}}</span>
+									{{item.date|date('d/m/Y')}}
+								</div>
+								<h2 class="fs12r">{{item.title}}</h2>
+								<a href="{{base_url('detail/' ~ item.slug)}}" class="linkin text-uppercase fs08r">more</a>
+							</article>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -46,13 +47,18 @@
 {% endblock %}
 
 {% block scripts %}
-<style>
-</style>
-<script>
-		let Sized = function () { document.querySelector('#about-header-text').style.height = '100vh'; } 
-        window.addEventListener('load', (event) => { Sized(); });
-        window.addEventListener('resize', (event) => { Sized(); });
-        document.querySelector(".main-menu li a").classList.remove('active');
-        document.querySelector(".insight").classList.add('active');
-</script>
+	<style></style>
+	<script>
+		let Sized = function () {
+document.querySelector('#about-header-text').style.height = '100vh';
+}
+window.addEventListener('load', (event) => {
+Sized();
+});
+window.addEventListener('resize', (event) => {
+Sized();
+});
+document.querySelector(".main-menu li a").classList.remove('active');
+document.querySelector(".insight").classList.add('active');
+	</script>
 {% endblock %}
